# Prediction_Cloudcost

./: .gitignore  .vercelignore  Benchmark_Forecasting.ipynb  CLAUDE.md  LICENSE  README.md  Sia_FinOps_AI_Pitch.pptx  Timeseries.ipynb  bandit.yaml  build_pitch_pptx.py  deploy.sh  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md
back/: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
back/agent/: __init__.py  graph.py  registry.py  tools.py
back/analysis/: advanced.py  service_taxonomy.py  services.py  simulation.py  timeseries.py
back/core/: auth.py  aws_session.py  azure_session.py  cache.py  config.py  conversations.py  credentials_flow.py  crypto.py  dynamo.py  errors.py  logging.py  pagination.py  portfolios.py  precompute.py  session.py  user_context.py
back/data/: Benchmark_Forecasting.ipynb  Timeseries.ipynb  daily_costs.parquet  daily_per_service.parquet  loader.py
back/forecast/: engine.py
back/routes/: routes_advanced.py  routes_analytics.py  routes_auth.py  routes_aws.py  routes_azure.py  routes_chat.py  routes_conversations.py  routes_credentials.py  routes_data.py  routes_events.py  routes_forecast.py  routes_gcp.py  routes_health.py  routes_local_billing.py  routes_portfolios.py  routes_simulation.py  routes_tools.py
back/schemas/: advanced.py  analytics.py  auth.py  aws.py  azure.py  chat.py  conversations.py  credentials.py  forecast.py  gcp.py  health.py  local_billing.py  portfolios.py  simulation.py
back/tests/: test_calculations.py  test_forecast_engine.py  test_security.py  test_smoke.py
(+150 files in other folders)
